<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <Button
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

    <CheckBox
        android:id="@+id/note_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solved_label" />

    <Button
        android:id="@+id/suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_text" />

    <Button
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_text" />

</LinearLayout>